Updated with FE, K8s and Docker changes.
